--- a/.github/workflows/release-stage.yaml
+++ b/.github/workflows/release-stage.yaml
@@ -1,9 +1,9 @@
-name: release-please
+name: release-please stage
 
 on:
   push:
     branches:
-      - main
+      - stage
 
 permissions:
   contents: write
@@ -17,4 +17,5 @@ jobs:
         with:
           release-type: node
           prerelease: true
+          defaultBranch: stage
           changelog-types: '[{"type":"feat","section":"Features","hidden":false},{"type":"fix","section":"Bug Fixes","hidden":false},{"type":"chore","section":"Miscellaneous","hidden":false}]'
