--- a/.github/workflows/build-publish-prod.yaml
+++ b/.github/workflows/build-publish-prod.yaml
@@ -28,7 +28,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: vmonjaret/release-please/release-please
+          images: ghcr.io/vmonjaret/release-please
       -
         name: Build and push
         uses: docker/build-push-action@v4
