ci(stage): add release please
Signed-off-by: Vincent Monjaret <vmonjaret@gmail.com>

--- a/.github/workflows/release-stage.yaml
+++ b/.github/workflows/release-stage.yaml
@@ -3,7 +3,7 @@ name: release-please
 on:
   push:
     branches:
-      - main
+      - development
 
 permissions:
   contents: write
@@ -17,8 +17,9 @@ jobs:
         with:
           token: ${{secrets.PAT}}
           release-type: node
+          target-branch: main
           changelog-types: '[
-            {"type":"feat","section":"Features","hidden":false},
-            {"type":"fix","section":"Bug Fixes","hidden":false},
-            {"type":"chore","section":"Miscellaneous","hidden":false}
-          ]'
+              {"type":"feat","section":"Features","hidden":false},
+              {"type":"fix","section":"Bug Fixes","hidden":false},
+              {"type":"chore","section":"Miscellaneous","hidden":false}
+            ]'
