--- a/release-please-stage.json
+++ b/release-please-stage.json
@@ -1,5 +1,11 @@
 {
     "$schema": "https://raw.githubusercontent.com/googleapis/release-please/main/schemas/config.json",
+    "packages": {
+        ".": {
+          "package-name": "release-please",
+          "changelog-path": "CHANGELOG.md"
+        }
+    },
     "prerelease": true,
     "release-type": "node",
     "changelog-sections": [
